extend user api endpoints with identifiers of subscribed vehicles (per user)
